# clockdown

./: .gitignore  GNUmakefile  clockdown.cabal  clockdown.hs  clockdown.nix  default.nix
src/: Clockdown.hs
src/Clockdown/Core/: Action.hs  Binding.hs  Clock.hs  Clockdown.hs  Color.hs  Config.hs  Countdown.hs  Dispatch.hs  Properties.hs  Stack.hs  Window.hs
src/Clockdown/Core/Digital/: Display.hs  Indicator.hs
src/Clockdown/UI/Common/: Action.hs  Binding.hs  Dispatch.hs
src/Clockdown/UI/Term/: Binding.hs  Draw.hs  Run.hs
test/: IndicatorTest.hs  Main.hs
