--------------------------------------------------------------------------------
name:          clockdown
version:       0.1.0.0
license:       BSD2
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright: (c) 2015 Peter J. Jones
category:      System
build-type:    Simple
stability:     experimental
tested-with:   GHC == 7.10.1
cabal-version: >=1.10

--------------------------------------------------------------------------------
extra-source-files:
  CHANGES
  README.md

--------------------------------------------------------------------------------
flag maintainer
  description: Enable settings for the package maintainer.
  manual: True
  default: False

--------------------------------------------------------------------------------
library
  exposed-modules:
    Clockdown.Core.Digital.Display
    Clockdown.Core.Digital.Indicator

  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-incomplete-uni-patterns

  if flag(maintainer)
    ghc-options: -Werror
    ghc-prof-options: -prof -auto-all

  build-depends: base          >= 4.7  && < 5.0
               , time          >= 1.5  && < 1.6

--               , hscurses      >= 1.4  && < 1.5

--------------------------------------------------------------------------------
test-suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    IndicatorTest

  ghc-options: -Wall -fwarn-incomplete-uni-patterns

  if flag(maintainer)
    ghc-options: -Werror

  build-depends: base
               , clockdown
               , tasty       >= 0.10 && < 0.11
               , tasty-hunit >= 0.9  && < 0.10
